@@ -1,6 +1,7 @@
 package fr.openmc.core.features.city.commands.autocomplete;
 
 import fr.openmc.core.features.city.City;
+import fr.openmc.core.features.city.CityManager;
 import fr.openmc.core.features.city.models.DBCityRank;
 import org.jetbrains.annotations.NotNull;
 import revxrsal.commands.autocomplete.SuggestionProvider;
@@ -8,19 +9,16 @@ import revxrsal.commands.bukkit.actor.BukkitCommandActor;
 import revxrsal.commands.node.ExecutionContext;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static fr.openmc.core.features.city.CityManager.playerCities;
 
 public class CityRanksAutoComplete implements SuggestionProvider<BukkitCommandActor> {
 
     @Override
     public @NotNull List<String> getSuggestions(@NotNull ExecutionContext<BukkitCommandActor> context) {
-        City city = playerCities.get(context.actor().requirePlayer().getUniqueId());
+        City city = CityManager.getPlayerCity(context.actor().requirePlayer().getUniqueId());
         if (city == null) return List.of();
 
         return city.getRanks().stream()
                 .map(DBCityRank::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
